--- a/Tarea1/app/html/index.html
+++ b/Tarea1/app/html/index.html
@@ -1,58 +1,24 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title> FrutiVerdeOnline </title>
-    <link rel="stylesheet" href="../css/confesiones.css">
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FrutiVerde Online</title>
+    <link rel="stylesheet" href="/app/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Roboto&display=swap" rel="stylesheet">
-
-  </head>
-  <body>
-    <!-- navbar -->
-    <div class="navbar">
-        <img id="logo-id" src="../fruit-basket-icon.svg" alt="Logo de FrutiVerdeOnline"/>
-        <h1>FrutiVerdeOnline</h1>
-        <a class="navbar-page" href="#home">Home</a>
-        <a class="navbar-page" href="#about">About</a>
-        <a class="navbar-page" href="#contact">Contact</a>
-        <a id="logout-btn" href="#logout">Logout</a>
+</head>
+<body>
+    <div class="container">
+        <h1>FrutiVerde Online</h1>
+        <p>Por favor selecciona una opción:</p>
+        <ul class="menu">
+            <li><a href="producto/agregar-producto.html">Agregar producto</a></li>
+            <li><a href="producto/ver-productos.html">Ver productos</a></li>
+            <li><a href="pedido/agregar-pedido.html">Agregar pedido</a></li>
+            <li><a href="pedido/ver-pedidos.html">Ver pedidos</a></li>
+        </ul>
     </div>
-    
-    <!-- confesiones -->
-    <div class="main-container">
-        <div class="conf-user">
-            <h1>Escribe tu confesion!!!</h1>
-            <form id="conf-form" action="" method="post">
-                <textarea name="" id="conf-text-area" cols="30" rows="10"></textarea>
-                <button type="button" id="submit-conf-btn">Enviar</a>
-            </form>
-            </div>
-        <div id="conf-list">
-            <div class="conf-container">
-                <div class="conf-author">
-                    <img src="https://via.placeholder.com/75x75" alt="Placeholder Image">
-                    <p>John</p>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In iaculis nunc sed augue lacus. Sed risus ultricies tristique nulla aliquet. Et ultrices neque ornare aenean euismod elementum nisi quis. Pretium quam vulputate dignissim suspendisse in est ante in. Dis parturient montes nascetur ridiculus mus mauris vitae ultricies. Sed adipiscing diam donec adipiscing. Lorem ipsum dolor sit amet consectetur adipiscing elit duis tristique. Risus pretium quam vulputate dignissim. Non enim praesent elementum facilisis. Leo in vitae turpis massa sed elementum.</p>
-            </div>
-            <div class="conf-container">
-                <div class="conf-author">
-                    <img src="https://via.placeholder.com/75x75" alt="Placeholder Image">
-                    <p>John</p>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In iaculis nunc sed augue lacus. Sed risus ultricies tristique nulla aliquet. Et ultrices neque ornare aenean euismod elementum nisi quis. Pretium quam vulputate dignissim suspendisse in est ante in. Dis parturient montes nascetur ridiculus mus mauris vitae ultricies. Sed adipiscing diam donec adipiscing. Lorem ipsum dolor sit amet consectetur adipiscing elit duis tristique. Risus pretium quam vulputate dignissim. Non enim praesent elementum facilisis. Leo in vitae turpis massa sed elementum.</p>
-            </div>
-            <div class="conf-container">
-                <div class="conf-author">
-                    <img src="https://via.placeholder.com/75x75" alt="Placeholder Image">
-                    <p>John</p>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In iaculis nunc sed augue lacus. Sed risus ultricies tristique nulla aliquet. Et ultrices neque ornare aenean euismod elementum nisi quis. Pretium quam vulputate dignissim suspendisse in est ante in. Dis parturient montes nascetur ridiculus mus mauris vitae ultricies. Sed adipiscing diam donec adipiscing. Lorem ipsum dolor sit amet consectetur adipiscing elit duis tristique. Risus pretium quam vulputate dignissim. Non enim praesent elementum facilisis. Leo in vitae turpis massa sed elementum.</p>
-            </div>
-        </div>
-    </div>
-    <script lang="javascript" src="../js/confesiones.js"></script>
-  </body>
+</body>
 </html>
