--- a/Tarea1/app/html/index.html
+++ b/Tarea1/app/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FrutiVerde Online</title>
-    <link rel="stylesheet" href="/app/css/index.css">
+    <link rel="stylesheet" href="/Tarea1/app/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Roboto&display=swap" rel="stylesheet">
