Remake index y agregar-prod

--- a/Tarea1/app/html/index.html
+++ b/Tarea1/app/html/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FrutiVerde Online</title>
-    <link rel="stylesheet" href="/Tarea1/app/css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <div class="navbar">
+        <img id="logo-id" src="../fruit-basket-icon.svg" alt="Logo"/>
         <h1>FrutiVerde Online</h1>
+        <a class="navbar-page" href="index.html">Inicio</a>
+    </div>
+    <div class="container">
         <p>Por favor selecciona una opción:</p>
         <ul class="menu">
             <li><a href="producto/agregar-producto.html">Agregar producto</a></li>
