--- a/Tarea1/app/html/producto/agregar-producto.html
+++ b/Tarea1/app/html/producto/agregar-producto.html
@@ -52,6 +52,8 @@
                 <option value="fruta">Fruta</option>
                 <option value="verdura">Verdura</option>
             </select>
+            <label for="descripcion">Descripción:</label>
+            <textarea name="Descripcion" id="descripcion" cols="50" rows="4"></textarea>
         
             <label for="foto1">Foto 1:</label>
             <div class="input-container">
