Html terminado, CSS por revisar

--- a/Tarea1/app/html/producto/informacion-producto.html
+++ b/Tarea1/app/html/producto/informacion-producto.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="../../css/informacion-producto.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="navbar">
         <img id="logo-id" src="../../fruit-basket-icon.svg" alt="Logo"/>
         <h1>FrutiVerde Online</h1>
         <a class="navbar-page" href="../index.html">Inicio</a>
+        <a class="navbar-page" href="../producto/ver-productos.html">Volver al listado</a>
+
     </div>
     <div class="container">
         <h1>Información Producto</h1>
@@ -21,23 +24,18 @@
                 <th> Tipo</th>
                 <th> Producto(s)</th>
                 <th> Región</th>
-                <th> Comuna</th>
-                <th> Fotos</th>     
+                <th> Comuna</th>  
             </tr>
             <tr>
-                <td> Verdura </td>
-                <td> Apio </td>
+                <td> Fruta </td>
+                <td> Manzana </td>
                 <td> Región Metropolitana </td>
                 <td> Providencia </td>
-                <td> <img src="../../media/manzana_chica.png",alt="Foto Producto"/> </td>
             </tr>
+        </div>
+        <img id="fotoProducto" src="../../media/manzana_chica.png" alt="Foto Producto"/> 
+        <div>
         </table>
-    </div>
+
 </body>
-
-
-
-
-
-
 </html>
