--- a/Tarea1/app/html/producto/ver-productos.html
+++ b/Tarea1/app/html/producto/ver-productos.html
@@ -3,6 +3,7 @@
     <head>
         <title>FrutiVerde Online</title>
         <link rel="stylesheet" type="text/css" href="../../css/ver-productos.css">
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Roboto&display=swap" rel="stylesheet">
     </head>
         <div class="navbar">
             <img id="logo-id" src="../../fruit-basket-icon.svg" alt="Logo"/>
@@ -20,56 +21,37 @@
                 </tr>
                 <tr>
                     <td> Verdura </td>
-                    <td> Apio </td>
+                    <td> <a href="../producto/informacion-producto.html">Apio</a></td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
                     <td> <img src="../../media/manzana_chica.png",alt="Foto Producto"/> </td>
                 </tr>
                 <tr>
                     <td> Verdura </td>
-                    <td> Tomate </td>
+                    <td> <a href="../producto/informacion-producto.html">Tomate</a></td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
                     <td> <img src="../../media/manzana_chica.png",alt="Foto Producto"/> </td>
                 </tr>
                 <tr>
                     <td> Verdura </td>
-                    <td> Lechuga </td>
-                    <td> Región Metropolitana </td>
+                    <td> <a href="../producto/informacion-producto.html">Lechuga</a></td>                    <td> Región Metropolitana </td>
                     <td> Providencia </td>
                     <td> <img src="../../media/manzana_chica.png",alt="Foto Producto"/> </td>
                 </tr>
                 <tr>
                     <td> Fruta </td>
-                    <td> Manzana </td>
-                    <td> Región Metropolitana </td>
+                    <td> <a href="../producto/informacion-producto.html">Manzana</a></td>                    <td> Región Metropolitana </td>
                     <td> Providencia </td>
                     <td> <img src="../../media/manzana_chica.png",alt="Foto Producto"/> </td>
                 </tr>
                 <tr>
                     <td> Fruta </td>
-                    <td> Durazno </td>
+                    <td> <a href="../producto/informacion-producto.html">Durazno</a></td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
                     <td> <img src="../../media/manzana_chica.png",alt="Foto Producto"/> </td>
                 </tr>
             </table>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
