--- a/Tarea1/app/html/producto/agregar-producto.html
+++ b/Tarea1/app/html/producto/agregar-producto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FrutiVerde Express</title>
     <link rel="stylesheet" href="../../css/agregar-producto.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Roboto&display=swap" rel="stylesheet">
     <script src="../../js/agregar-producto.js" defer></script>
 </head>
 <body>
