Validacion CSS y HTML

--- a/Tarea1/app/html/pedido/informacion-pedido.html
+++ b/Tarea1/app/html/pedido/informacion-pedido.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +12,7 @@
 </head>
 <body>
     <div class="navbar">
-        <img id="logo-id" src="../../fruit-basket-icon.svg" alt="Logo"/>
+        <img id="logo-id" src="../../fruit-basket-icon.svg" alt="Logo">
         <h1>FrutiVerde Online</h1>
         <a class="navbar-page" href="../index.html">Inicio</a>
         <a class="navbar-page" href="../pedido/ver-pedidos.html">Volver al listado</a>
@@ -35,6 +36,6 @@
                 <td> Juan Pérez</td>
             </tr>
         </table>
-
+    </div>
 </body>
 </html>
