--- a/Tarea1/app/html/producto/informacion-producto.html
+++ b/Tarea1/app/html/producto/informacion-producto.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="navbar">
-        <img id="logo-id" src="../../fruit-basket-icon.svg" alt="Logo"/>
+        <img id="logo-id" src="../../fruit-basket-icon.svg" alt="Logo">
         <h1>FrutiVerde Online</h1>
         <a class="navbar-page" href="../index.html">Inicio</a>
         <a class="navbar-page" href="../producto/ver-productos.html">Volver al listado</a>
@@ -32,10 +32,8 @@
                 <td> Región Metropolitana </td>
                 <td> Providencia </td>
             </tr>
-        </div>
-        <img id="fotoProducto" src="../../media/manzana_chica.png" alt="Foto Producto"/> 
-        <div>
         </table>
-
+        <div> <img id="fotoProducto" src="../../media/manzana_chica.png" alt="Foto Producto"> </div>
+        </div>
 </body>
 </html>
