--- a/Tarea1/app/html/producto/ver-productos.html
+++ b/Tarea1/app/html/producto/ver-productos.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FrutiVerde Online</title>
         <link rel="stylesheet" type="text/css" href="../../css/ver-productos.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Roboto&display=swap" rel="stylesheet">
     </head>
         <div class="navbar">
-            <img id="logo-id" src="../../fruit-basket-icon.svg" alt="Logo"/>
+            <img id="logo-id" src="../../fruit-basket-icon.svg" alt="Logo">
             <h1>FrutiVerde Online</h1>
             <a class="navbar-page" href="../index.html">Inicio</a>
         </div>
@@ -24,33 +28,33 @@
                     <td> <a href="../producto/informacion-producto.html">Apio</a></td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
-                    <td> <img src="../../media/manzana_chica.png",alt="Foto Producto"/> </td>
+                    <td> <img src="../../media/manzana_chica.png" alt="Foto Producto"> </td>
                 </tr>
                 <tr>
                     <td> Verdura </td>
                     <td> <a href="../producto/informacion-producto.html">Tomate</a></td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
-                    <td> <img src="../../media/manzana_chica.png",alt="Foto Producto"/> </td>
+                    <td> <img src="../../media/manzana_chica.png" alt="Foto Producto"> </td>
                 </tr>
                 <tr>
                     <td> Verdura </td>
                     <td> <a href="../producto/informacion-producto.html">Lechuga</a></td>                    <td> Región Metropolitana </td>
                     <td> Providencia </td>
-                    <td> <img src="../../media/manzana_chica.png",alt="Foto Producto"/> </td>
+                    <td> <img src="../../media/manzana_chica.png" alt="Foto Producto"> </td>
                 </tr>
                 <tr>
                     <td> Fruta </td>
                     <td> <a href="../producto/informacion-producto.html">Manzana</a></td>                    <td> Región Metropolitana </td>
                     <td> Providencia </td>
-                    <td> <img src="../../media/manzana_chica.png",alt="Foto Producto"/> </td>
+                    <td> <img src="../../media/manzana_chica.png" alt="Foto Producto"> </td>
                 </tr>
                 <tr>
                     <td> Fruta </td>
                     <td> <a href="../producto/informacion-producto.html">Durazno</a></td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
-                    <td> <img src="../../media/manzana_chica.png",alt="Foto Producto"/> </td>
+                    <td> <img src="../../media/manzana_chica.png" alt="Foto Producto"> </td>
                 </tr>
             </table>
         </div>
