--- a/Tarea1/app/html/pedido/agregar-pedido.html
+++ b/Tarea1/app/html/pedido/agregar-pedido.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="navbar">
-        <img id="logo-id" src="../../fruit-basket-icon.svg" alt="Logo"/>
+        <img id="logo-id" src="../../fruit-basket-icon.svg" alt="Logo">
         <h1>FrutiVerde Online</h1>
         <a class="navbar-page" href="../index.html">Inicio</a>
     </div>
