--- a/Tarea1/app/html/pedido/ver-pedidos.html
+++ b/Tarea1/app/html/pedido/ver-pedidos.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FrutiVerde Online</title>
         <link rel="stylesheet" type="text/css" href="../../css/ver-pedidos.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Roboto&display=swap" rel="stylesheet">
+
         <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Roboto&display=swap" rel="stylesheet">
     </head>
         <div class="navbar">
-            <img id="logo-id" src="../../fruit-basket-icon.svg" alt="Logo"/>
+            <img id="logo-id" src="../../fruit-basket-icon.svg" alt="Logo">
             <h1>FrutiVerde Online</h1>
             <a class="navbar-page" href="../index.html">Inicio</a>
         </div>
