--- a/Tarea1/app/html/pedido/ver-pedidos.html
+++ b/Tarea1/app/html/pedido/ver-pedidos.html
@@ -8,16 +8,15 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Roboto&display=swap" rel="stylesheet">
-
-        <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Roboto&display=swap" rel="stylesheet">
     </head>
+    <body>
         <div class="navbar">
             <img id="logo-id" src="../../fruit-basket-icon.svg" alt="Logo">
             <h1>FrutiVerde Online</h1>
             <a class="navbar-page" href="../index.html">Inicio</a>
         </div>
         <div class="order-table">
-            <table>
+            <table id="tablaPedidos">
                 <tr>
                     <th> Tipo</th>
                     <th> Producto(s)</th>
@@ -27,37 +26,39 @@
                 </tr>
                 <tr>
                     <td> Fruta, Verdura </td>
-                    <td> <a href="../pedido/informacion-pedido.html">Durazno, Apio, Lechuga </a></td>
+                    <td> Durazno, Apio, Lechuga </td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
                     <td> Juan Pérez </td>
                 </tr>
                 <tr>
                     <td> Verdura </td>
-                    <td> <a href="../pedido/informacion-pedido.html">Tomate, Brócoli</a></td>
+                    <td> Tomate, Brócoli</td>
                     <td> Región Metropolitana </td>
                     <td> Lo Prado </td>
                     <td> Eduardo Rivera </td>
                 </tr>
                 <tr>
                     <td> Fruta, Verdura </td>
-                    <td> <a href="../pedido/informacion-pedido.html">Lechuga, Rábano, Alcachofa, Pomelo, Cereza</a></td>                    <td> Región Metropolitana </td>
+                    <td> Lechuga, Rábano, Alcachofa, Pomelo, Cereza</td>                    <td> Región Metropolitana </td>
                     <td> Santiago Centro </td>
                     <td> Jorge San Martín </td>
                 </tr>
                 <tr>
                     <td> Fruta </td>
-                    <td> <a href="../pedido/informacion-pedido.html">Papaya, Uva, Pistacho, Nuez</a></td>                    <td> Región Metropolitana </td>
+                    <td> Papaya, Uva, Pistacho, Nuez</td>                    <td> Región Metropolitana </td>
                     <td> Recoleta </td>
                     <td> Luis Castillo </td>
                 </tr>
                 <tr>
                     <td> Fruta </td>
-                    <td> <a href="../pedido/informacion-pedido.html">Pera</a></td>
+                    <td> Pera</td>
                     <td> Región Metropolitana </td>
                     <td> Independencia </td>
                     <td> Miguel Errázuriz </td>
                 </tr>
             </table>
         </div>
+    <script lang="javascript" src="../../js/ver-pedidos.js"></script>
+    </body>
 </html>
