--- a/Tarea1/app/html/producto/informacion-producto.html
+++ b/Tarea1/app/html/producto/informacion-producto.html
@@ -33,7 +33,8 @@
                 <td> Providencia </td>
             </tr>
         </table>
-        <div> <img id="fotoProducto" src="../../media/manzana_chica.png" alt="Foto Producto"> </div>
+        <div> <img id="fotoProducto" src="../../media/medium/manzana_medium.jpg" alt="Foto Producto"> </div>
         </div>
+<script lang="javascript" src="../../js/informacion-producto.js"></script>
 </body>
 </html>
