--- a/Tarea1/app/html/producto/ver-productos.html
+++ b/Tarea1/app/html/producto/ver-productos.html
@@ -9,13 +9,14 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Roboto&display=swap" rel="stylesheet">
     </head>
+    <body>
         <div class="navbar">
             <img id="logo-id" src="../../fruit-basket-icon.svg" alt="Logo">
             <h1>FrutiVerde Online</h1>
             <a class="navbar-page" href="../index.html">Inicio</a>
         </div>
         <div class="products-table">
-            <table>
+            <table id="tablaProductos">
                 <tr>
                     <th> Tipo</th>
                     <th> Producto(s)</th>
@@ -25,37 +26,42 @@
                 </tr>
                 <tr>
                     <td> Verdura </td>
-                    <td> <a href="../producto/informacion-producto.html">Apio</a></td>
+                    <td> Apio</td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
                     <td> <img src="../../media/manzana_chica.png" alt="Foto Producto"> </td>
                 </tr>
                 <tr>
                     <td> Verdura </td>
-                    <td> <a href="../producto/informacion-producto.html">Tomate</a></td>
+                    <td> Tomate</td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
                     <td> <img src="../../media/manzana_chica.png" alt="Foto Producto"> </td>
                 </tr>
                 <tr>
                     <td> Verdura </td>
-                    <td> <a href="../producto/informacion-producto.html">Lechuga</a></td>                    <td> Región Metropolitana </td>
+                    <td> Lechuga</td>
+                    <td> Región Metropolitana </td>
                     <td> Providencia </td>
                     <td> <img src="../../media/manzana_chica.png" alt="Foto Producto"> </td>
                 </tr>
                 <tr>
                     <td> Fruta </td>
-                    <td> <a href="../producto/informacion-producto.html">Manzana</a></td>                    <td> Región Metropolitana </td>
+                    <td> Manzana</td>
+                    <td> Región Metropolitana </td>
                     <td> Providencia </td>
                     <td> <img src="../../media/manzana_chica.png" alt="Foto Producto"> </td>
                 </tr>
                 <tr>
                     <td> Fruta </td>
-                    <td> <a href="../producto/informacion-producto.html">Durazno</a></td>
+                    <td> Durazno</td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
                     <td> <img src="../../media/manzana_chica.png" alt="Foto Producto"> </td>
                 </tr>
             </table>
+            
         </div>
+        <script lang="javascript" src="../../js/ver-productos.js"></script>
+    </body>
 </html>
