--- a/Tarea1/app/html/producto/ver-productos.html
+++ b/Tarea1/app/html/producto/ver-productos.html
@@ -29,35 +29,35 @@
                     <td> Apio</td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
-                    <td> <img src="../../media/manzana_chica.png" alt="Foto Producto"> </td>
+                    <td> <img src="../../media/small/manzana_small.png" alt="Foto Producto"> </td>
                 </tr>
                 <tr>
                     <td> Verdura </td>
                     <td> Tomate</td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
-                    <td> <img src="../../media/manzana_chica.png" alt="Foto Producto"> </td>
+                    <td> <img src="../../media/small/manzana_small.png" alt="Foto Producto"> </td>
                 </tr>
                 <tr>
                     <td> Verdura </td>
                     <td> Lechuga</td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
-                    <td> <img src="../../media/manzana_chica.png" alt="Foto Producto"> </td>
+                    <td> <img src="../../media/small/manzana_small.png" alt="Foto Producto"> </td>
                 </tr>
                 <tr>
                     <td> Fruta </td>
                     <td> Manzana</td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
-                    <td> <img src="../../media/manzana_chica.png" alt="Foto Producto"> </td>
+                    <td> <img src="../../media/small/manzana_small.png" alt="Foto Producto"> </td>
                 </tr>
                 <tr>
                     <td> Fruta </td>
                     <td> Durazno</td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
-                    <td> <img src="../../media/manzana_chica.png" alt="Foto Producto"> </td>
+                    <td> <img src="../../media/small/manzana_small.png" alt="Foto Producto"> </td>
                 </tr>
             </table>
             
