--- a/Tarea1/app/html/pedido/informacion-pedido.html
+++ b/Tarea1/app/html/pedido/informacion-pedido.html
@@ -36,6 +36,6 @@
             </tr>
         </table>
     </div>
-<script lang="javascript" src="../../js/informacion-pedido.js"></script>
+<script src="../../js/informacion-pedido.js"></script>
 </body>
 </html>
