--- a/Tarea1/app/html/pedido/ver-pedidos.html
+++ b/Tarea1/app/html/pedido/ver-pedidos.html
@@ -36,7 +36,7 @@
                     <td> Tomate, Brócoli</td>
                     <td> Región Metropolitana </td>
                     <td> Lo Prado </td>
-                    <td> Eduardo Rivera </td>
+                    <td> Claudio López </td>
                 </tr>
                 <tr>
                     <td> Fruta, Verdura </td>
