--- a/Tarea1/app/html/index.html
+++ b/Tarea1/app/html/index.html
@@ -16,7 +16,7 @@
         <a class="navbar-page" href="index.html">Inicio</a>
     </div>
     <div class="container">
-        <p>Por favor selecciona una opción:</p>
+        <h1>Por favor selecciona una opción:</h1>
         <ul class="menu">
             <li><a href="producto/agregar-producto.html">Agregar producto</a></li>
             <li><a href="producto/ver-productos.html">Ver productos</a></li>
