--- a/Tarea1/app/html/pedido/ver-pedidos.html
+++ b/Tarea1/app/html/pedido/ver-pedidos.html
@@ -19,7 +19,7 @@
             <table id="tablaPedidos">
                 <tr>
                     <th> Tipo</th>
-                    <th> Producto(s)</th>
+                    <th> Pedido</th>
                     <th> Región</th>
                     <th> Comuna</th>
                     <th> Nombre comprador</th>     
