--- a/Tarea1/app/html/pedido/ver-pedidos.html
+++ b/Tarea1/app/html/pedido/ver-pedidos.html
@@ -59,6 +59,6 @@
                 </tr>
             </table>
         </div>
-    <script lang="javascript" src="../../js/ver-pedidos.js"></script>
+    <script src="../../js/ver-pedidos.js"></script>
     </body>
 </html>
