--- a/Tarea1/app/html/producto/informacion-producto.html
+++ b/Tarea1/app/html/producto/informacion-producto.html
@@ -35,6 +35,6 @@
         </table>
         <div> <img id="fotoProducto" src="../../media/medium/manzana_medium.png" alt="Foto Producto"> </div>
         </div>
-<script lang="javascript" src="../../js/informacion-producto.js"></script>
+<script src="../../js/informacion-producto.js"></script>
 </body>
 </html>
