--- a/Tarea1/app/html/producto/ver-productos.html
+++ b/Tarea1/app/html/producto/ver-productos.html
@@ -29,21 +29,21 @@
                     <td> Apio</td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
-                    <td> <img src="../../media/small/manzana_small.png" alt="Foto Producto"> </td>
+                    <td> <img src="../../media/small/apio_small.png" alt="Foto Producto"> </td>
                 </tr>
                 <tr>
                     <td> Verdura </td>
                     <td> Tomate</td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
-                    <td> <img src="../../media/small/manzana_small.png" alt="Foto Producto"> </td>
+                    <td> <img src="../../media/small/tomate_small.png" alt="Foto Producto"> </td>
                 </tr>
                 <tr>
                     <td> Verdura </td>
                     <td> Lechuga</td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
-                    <td> <img src="../../media/small/manzana_small.png" alt="Foto Producto"> </td>
+                    <td> <img src="../../media/small/lechuga_small.png" alt="Foto Producto"> </td>
                 </tr>
                 <tr>
                     <td> Fruta </td>
@@ -57,11 +57,11 @@
                     <td> Durazno</td>
                     <td> Región Metropolitana </td>
                     <td> Providencia </td>
-                    <td> <img src="../../media/small/manzana_small.png" alt="Foto Producto"> </td>
+                    <td> <img src="../../media/small/durazno_small.png" alt="Foto Producto"> </td>
                 </tr>
             </table>
             
         </div>
-        <script lang="javascript" src="../../js/ver-productos.js"></script>
+        <script src="../../js/ver-productos.js"></script>
     </body>
 </html>
